@@ -1,12 +1,34 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST ruby-gnome2-all-1.1.8.tar.gz 1018612 SHA256 5118fc18eeff60cbe371e6461dc6329e7c544f1908219df42462274dace5968a SHA512 3ce05278fca4b402f5e8ec9883290022ad07ea800af436ee35ab6a4960e4004a0c076567c68587bee81a27d863ba54de19a7816585ce510d308b7e0e91fb1981 WHIRLPOOL b59ed271675ca8f9b80aeecd7d003537011a7162131176ca202b7a40fafae27cc8da687a50792985f07477dcf310a70d0c512692d649b3584d64653af9cf0e1b
 DIST ruby-gnome2-all-1.2.6.tar.gz 1718802 SHA256 b9e0093e82d53aead93ba1cd261faf03ccede873ee0e7ffd35090ce1c604be66 SHA512 b2e123ece31b89dc1d37040297d726b625d71579bbf60cb84c89b63f0fb9bf097d5f0675a16dfc7aecd8161913c737b22c057cc872dd454f341440c76901c07d WHIRLPOOL 2e4f47014b93838a9c31267fcca86458127ab9bc02b241a6bd0c3f14df8af7a25f6166d294577eb674f59c1e1d042208e5b448c83429011651dc6af0e9383b9a
 DIST ruby-gnome2-all-2.0.2.tar.gz 1674872 SHA256 12656b268206d2d1fc99da4f7163910844efc38117380180f37bfdac249310b9 SHA512 c739a565b14e31905a30e8ebf7cfd6abcf576bb45f3f0eaedba3937fda7818864825d95de5d1c229af5dc09c769d56e788a366cdbf74b625804fb844fd818d6f WHIRLPOOL 662eadbedc9b9e99de1cc6e3556f7bec6063c58c57f4d2ab0b51bbf98eeca9f5955910442a58ff3a7649f3e049f0d0573d83e7a503c0ca58bac3a265f50e121b
 DIST ruby-gnome2-all-2.1.0.tar.gz 1754946 SHA256 f59d2aa81351fc48ac4948279d7d39e241b8118eb80f0f733f6834d6ccace088 SHA512 b76f2198644ecceac59071cbb5afddbd3bd7ad641a17ec04ea994b10cc48fcc7e27dd651b19a905f761faf041ff8f2353174dd073a1a146693dc23218f8fab40 WHIRLPOOL 202fde8bfc84f156681005b9bc317fb7736f2766264d3ef8109f1720fc02d18258efe4c60d9cdd2b8463e69f21df094177d31eda3a87dfb9c7bb0ca6873a4fb3
 DIST ruby-gnome2-all-2.2.0.tar.gz 1736638 SHA256 73b2366152a15533d8e7056b30c76db6d5bdc6e5a1dc9c72320cbef91ff63c83 SHA512 71a263b9623b3d098aafcd63abc49af2ece19f4da45a4b2e3a698fb90c8302f61f1681d21c1bf2f823852afb06890470c5f6be1d4e4593b86487fd980ca460f5 WHIRLPOOL 0ece27bcd275b9a73cb1682dd268571e2ad7c35da0ddea0c715e0b215eb9bc5831ed879b70327ef5586deb4820c2caab7f0589acdc53e1f4b3f35f1ef7f8737c
+DIST ruby-gnome2-all-2.2.3.tar.gz 1657315 SHA256 1611038c2a49fe051dfcc779aeca8eb47273718d80a0680442504fd54e228154 SHA512 cf6b0c88c91e444f5ff65a4a863630c5455315c08f1b44a5f7c81db51f998d6e83ab62e00276edb4a81ea9942405d76724f52134d2388010ec0f157a6a5dc34e WHIRLPOOL e5a6347b360b64f6b690a28483f8618d58786bbbf1fd6c691952271c85bf1d96dc8c97f1e4ed541f6cf8afac56221950db30873cc83a24210b6feef969eaf4b7
 EBUILD ruby-rsvg-1.1.8.ebuild 615 SHA256 fd85d47b49d9ebc309d3dcf1ba07870ab29422fc7c970145701ddb929c88f0b5 SHA512 0965aae8456b75b2e83fafb97a3d5416456700651b5853d8a7cf0e874fed58a8c70073253ef2d98823ba09ab38e12ebe82d4daedd15d88c7fcc49c976ace6538 WHIRLPOOL b667115495826b8d94f316235764c4c32767a055cb8207e5ce3078d36024d05bb32d2ce4849db95abc7e92268b3d6c3b28837f5c75d9f02dc9fbb51bfa247d0b
 EBUILD ruby-rsvg-1.2.6.ebuild 618 SHA256 71284af5a91de038b06529f5812ed3ae5f8b182d6c6bf276482bc0cb881ebfff SHA512 e29740579315137c4d17de8c91dc8aeb85bd6345d11317f0dd2053a0fc24347d0c6952bcf919875d4316cfae0ddc12298024a71a40744e70e829af2370d19e37 WHIRLPOOL bfa01baa256c9c55cad27136db28414d4b093ff96ca25bf3fb16d69dcc31b6c49ad1dd2383d2cc5118842a9c306a2dbe2450da83159ba348f5ff2c740ca856df
 EBUILD ruby-rsvg-2.0.2.ebuild 625 SHA256 508e1d55373fa14e742d877d7fdb937ed6e713f30ccd96439c525618d13b9dae SHA512 adfdc489fdb72dd65df4d77222e2004402b972c24d7d88b2b0d1717b481d84302b8c6ae6bb2e03192dcfb8dfc588534e7cd3c843a6d59b007020c617e2e49900 WHIRLPOOL e062e4e326432df86082a9b82b6dfd056f1a11ed438a7aad5054dfff23989625ad264d1c638c871a3e293a64d14ac2f4f6b15db5f52eb8b773ee539b30597b6d
 EBUILD ruby-rsvg-2.1.0.ebuild 625 SHA256 9a03f1fa603142cb077ab70cba82adcc806cc7ff28b21e4e00fdb859ac8d1827 SHA512 ede0f95129eb6a3bcfaae04665492db2f188f1717827edc6cc6bbf039253f2d0c2df5819884624ce74c0b58d5bc51c86462facd9d4486829001e917188b7ba69 WHIRLPOOL e745e46dec53ddcb5fd0efe205973cce99aa5418c4abdebcba372ffa37754351783349deeb1167640357f81f2d40423d49f5dc9409664510665f88912d767983
 EBUILD ruby-rsvg-2.2.0.ebuild 625 SHA256 97bc6c6dbfd82816a461dfd47df5ff757916f800089cf7065f892265519ca6a4 SHA512 75705970a77ea19e69e3551333573e9bab75397c2192dd6e7f2a2d54dd6e2f63c72c7ff9f9bf97f01fa8b3072ce91d9c7553a56224cf3e5b47542e99eb9988ec WHIRLPOOL 4836223cbc15d81e131271ed416cdf6abe90ba3ac5f7f8936b1ea577cd9774e98429ff9e604f05628bd4e537d7af33cd693b0a9cece5800d36597e6d9bd1fea9
-MISC ChangeLog 6985 SHA256 9ff7e4866c8334dd5a7ee564d65dcb597dd7abfb4e05fc534de446bc5386b9f1 SHA512 693f93522a0d7c4cb06ed88ba8dbf242f8ca9d4ce40a02b3074d44fce2fa61728c094394caf76df9bc086284bb3b07c0950fbef26c1d302b4c8698cce3f99aec WHIRLPOOL 470e19e9a7015328df5b7e2ffac8ff367ed3415ec0fb5add554bf03580c84d583e8fde76d671136b4ef1b6005cb99e0cee7db1fe7933fa5346f04d44584dfda0
+EBUILD ruby-rsvg-2.2.3.ebuild 632 SHA256 dab8fe7900d5bd9d6e54f2d5cd29e2e04c9266567e10dae26bb50320544b802f SHA512 c021365888817180a0bf4df576de3801ed712a9100cd2e73847b020c1999d506914a08da17dd8acdcc03c520b930d2110132df00c81655a25ddd2b7ac1b30523 WHIRLPOOL 79f115a22321334c5a1e39ec33c07866a8aa700fef14b1fd17cd35087d4cfce6be645bddb76261316443776af36fb340edb2eb8f1f1d33f769126399e31fa4fd
+MISC ChangeLog 7105 SHA256 cebfdf8f763944860986e161ab95886d55817862710a2bcc7d808faaada19fba SHA512 96acb48256eaca72bdb36dec2bd9a06324d7044fbd2b1debc7da214bb7d0680e3242353c80f4c8f13e34d0b8360ccde99a68be35e3d3a4f3ea254a2cf49079b1 WHIRLPOOL 0b8dfbeea16d54ec75864717748afeaf51bf48bf5b2551fc264ccf8b0a58e3b809a4f910459775a9705dc35a83821a4aefba010e756b93f954d21ed75aac2eb1
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQIcBAEBCAAGBQJUhC5kAAoJEDYO1FT4VRUUExYQAJccckSWxfP+DfGy2eQXWNn1
+u6TenJK7RVvFE7QD4w4IGGoStZgT89O/MsWOl0TsESrryBdAPA4CFiENOCeUEJzM
+bI8AG2Y/FIPO9cd9Srn+3vwYih2GsQLcQZkRtEWtDcdHSf3rGSGURaoA63RPRbSh
++1hQGjRMho4C5r8gnU6wJn5v0V7pcHLJqbefL9YlA1rnCY+sD+yRgXyPdwvUSTkI
+QykJIzaRjI6vS/5gBSdMqDl2XwSK/h/8dtv9+NqII7FBw2hEVRITMz9kMBq3UyJm
+p9CHTFZm1uu76aeZqgISKknSw3C6hcioIKeujcP2ODE70tdh+RiAfwv0+ndMRBid
+KYl7LXJWjMDvCIbWze33Sua8KAwlH0voIgyCm24eZ54fJlmMaSxEMbYSeLtMAlyd
+/uyZrR+GL+FcKht731QvBbnzOPyItSVYins+KnOOIXaRtN0i98GTa1m/nQ1d2uX2
+KErGgVsQJW8pTdj10JopYDlAdaJ5V2glwVjYRatLmI+tO4qz5hRrmGnCIoNHKhyq
+vWCsdd4d29pJZAAx9Mi2q829niKYdnk/0jUlUcE1RA284kPsbCcd4ld3zwQRu+/s
+edAZkGmYk9A/dGzsygRPZT735Kbuuii0xPBZPLeJ4XQcuSBBKJ0Lofs5VnKICRSR
+XW7uDYcDS0j6Z4EVT7yC
+=Lg+7
+-----END PGP SIGNATURE-----
