@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/ruby-rsvg
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-rsvg/ChangeLog,v 1.54 2014/04/24 21:05:03 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-rsvg/ChangeLog,v 1.55 2014/12/07 10:39:31 naota Exp $
+
+*ruby-rsvg-2.2.3 (07 Dec 2014)
+
+  07 Dec 2014; Naohiro Aota <naota@gentoo.org> +ruby-rsvg-2.2.3.ebuild:
+  version bump
 
   24 Apr 2014; Manuel Rüger <mrueg@gentoo.org> ruby-rsvg-1.1.8.ebuild,
   ruby-rsvg-1.2.6.ebuild:
